[project]
name = "icebreaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "anthropic>=0.75.0",
    "gradio>=6.2.0",
    "llama-index>=0.14.12,<0.15",
    "llama-index-llms-anthropic>=0.10.4",
    "llama-index-readers-web>=0.5.6",
    "llama-index-embeddings-voyageai>=0.3.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"